--- a/index.html
+++ b/index.html
@@ -185,8 +185,11 @@
 
   </div>
   <!-- jQuery -->
+  <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.min.js">\x3C/script>')</script> -->
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.min.js">\x3C/script>')</script>
+  <script>window.jQuery || '<script src="js/libs/jquery-1.7.min.js">\x3C/script async>'</script>
   <!-- FlexSlider -->
   <script defer src="website/js/jquery.flexslider.js"></script>
 
