--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!--<meta property="og:image" content="http://gph.is/2oZQz8h" />-->
 </head>
-<body>
+<body class="loading">
   
   <div class="navbar-fixed">
 
