--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     </div>
   </div>
   
+  <div id="container" class="cf">
   <div class="flexslider">
 	  <ul class="slides">
 			<li data-thumb="website\slideshow\Regular_17.jpg">
@@ -183,6 +184,8 @@
 			</li>
 	  </ul>
 
+  </div>
+  
   </div>
   <!-- jQuery -->
   <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
