--- a/index.html
+++ b/index.html
@@ -250,11 +250,11 @@ Extensive experiment results demonstrate the merits of our approach over prior v
         </div>
 
         <div class="col m6 s12 center">
-          <a href="https://arxiv.org/abs/" target="_blank">
+          <a href="suppl_doc.pdf" target="_blank">
             <img src="website/images/icon_pdf.png">
           </a>
           <br>
-          <a href="https://arxiv.org/abs/" target="_blank">Supplementary Material</a>
+          <a href="suppl_doc.pdf" target="_blank">Supplementary Material</a>
         </div>
       </div>
 
