add overview video

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="left hide-on-med-and-down">
           <li><a class="nav-item waves-effect waves-light" href="#home">Home</a></li>
+          <li><a class="nav-item waves-effect waves-light" href="#video">Overview Video</a></li>
           <li><a class="nav-item waves-effect waves-light" href="#abstract">Abstract</a></li>
           <li><a class="nav-item waves-effect waves-light" href="#paper">Paper</a></li>
           <li><a class="nav-item waves-effect waves-light" href="#download">Download</a></li>
@@ -223,6 +224,15 @@
     </div> -->
 
     <br>
+	
+	
+    <div class="row section scrollspy" id="video">
+	<div class="title">Overview Video</div>
+	<br>
+	<center>
+	<iframe width="672" height="378" src="https://www.youtube.com/embed/1yIvDtg_x6c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</center>
+	</div>
 
     <div class="row section scrollspy" id="abstract">
       <div class="title">Abstract</div>
@@ -361,10 +371,6 @@ Extensive experiment results demonstrate the merits of our approach over prior v
         </div>
       </div>
     -->
-    
-    <div class="footer-copyright center black-text">
-      Copyright © Jason Lai 2017
-    </div>
   </footer>
 
 
