--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@ Extensive experiment results demonstrate the merits of our approach over prior v
       <div class="row">
 
         <div class="col m6 s12 center">
-          <a href="" target="_blank">
+          <a href="https://github.com/alex04072000/NeRViS" target="_blank">
             <img src="website/images/github.png">
           </a>
           <br>
-          <a href="" target="_blank">Code (coming soon)</a>
+          <a href="https://github.com/alex04072000/NeRViS" target="_blank">Code</a>
         </div>
 
         <div class="col m6 s12 center">
