--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container scrollspy" id="home">
 
-      <h4 class="header center black-text">NeRViS</h4>
-	  <h5 class="header center black-text">Neural Re-rendering for Full-frame Video Stabilization</h5>
+      <h4 class="header center black-text">FuSta</h4>
+	  <h5 class="header center black-text">Hybrid Neural Fusion for Full-frame Video Stabilization</h5>
 
       <br>
 
@@ -275,9 +275,9 @@ Extensive experiment results demonstrate the merits of our approach over prior v
 
       <div class="subtitle">Bibtex</div>
       <pre>
-@inproceedings{Liu-NeRViS-2021,
+@inproceedings{Liu-FuSta-2021,
     author    = {Liu, Yu-Lun and Lai, Wei-Sheng and Yang, Ming-Hsuan and Chuang, Yung-Yu and Huang, Jia-Bin}, 
-    title     = {Neural Re-rendering for Full-frame Video Stabilization}, 
+    title     = {Hybrid Neural Fusion for Full-frame Video Stabilization}, 
     journal   = {arXiv preprint},
     year      = {2021}
 }
@@ -291,11 +291,11 @@ Extensive experiment results demonstrate the merits of our approach over prior v
       <div class="row">
 
         <div class="col m6 s12 center">
-          <a href="https://github.com/alex04072000/NeRViS" target="_blank">
+          <a href="https://github.com/alex04072000/FuSta" target="_blank">
             <img src="website/images/github.png">
           </a>
           <br>
-          <a href="https://github.com/alex04072000/NeRViS" target="_blank">Code</a>
+          <a href="https://github.com/alex04072000/FuSta" target="_blank">Code</a>
         </div>
 
         <div class="col m6 s12 center">
