--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
   <meta name="author" content="yulunliu">
-  <title>Neural Re-rendering for Full-frame Video Stabilization</title>
+  <title>Hybrid Neural Fusion for Full-frame Video Stabilization</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
