--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ Existing video stabilization methods often generate visible distortion or requir
       <div class="title">Download</div>
       <div class="row">
 
-        <div class="col m6 s12 center">
+        <div class="col m4 s12 center">
           <a href="https://github.com/alex04072000/FuSta" target="_blank">
             <img src="website/images/github.png">
           </a>
@@ -294,12 +294,20 @@ Existing video stabilization methods often generate visible distortion or requir
           <a href="https://github.com/alex04072000/FuSta" target="_blank">Code</a>
         </div>
 
-        <div class="col m6 s12 center">
+        <div class="col m4 s12 center">
           <a href="https://drive.google.com/file/d/1QpyrrSAs67CS8UKGDSDPHSaRbFnACZ0j/view?usp=sharing" target="_blank">
             <img src="website/images/icon_zip.png">
           </a>
           <br>
-          <a href="https://drive.google.com/file/d/1QpyrrSAs67CS8UKGDSDPHSaRbFnACZ0j/view?usp=sharing" target="_blank">Results (6.85 GB)</a>
+          <a href="https://drive.google.com/file/d/1QpyrrSAs67CS8UKGDSDPHSaRbFnACZ0j/view?usp=sharing" target="_blank">All video stabilization results (6.85 GB)</a>
+        </div>
+
+        <div class="col m4 s12 center">
+          <a href="https://drive.google.com/file/d/16197Fv11ICdjO_oG_QvNq9B3oDdASygS/view?usp=sharing" target="_blank">
+            <img src="website/images/icon_zip.png">
+          </a>
+          <br>
+          <a href="https://drive.google.com/file/d/16197Fv11ICdjO_oG_QvNq9B3oDdASygS/view?usp=sharing" target="_blank">Our view synthesis results on Tanks and Temples (9 MB)</a>
         </div>
 
       </div>
