--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ Existing video stabilization methods often generate visible distortion or requir
 
     <div class="row">
       <div class="subtitle">Citation</div>
-      <p>Yu-Lun Liu, Wei-Sheng Lai, Ming-Hsuan Yang, Yung-Yu Chuang, and Jia-Bin Huang, "Neural Re-rendering for Full-frame Video Stabilization", ICCV, 2021</p>
+      <p>Yu-Lun Liu, Wei-Sheng Lai, Ming-Hsuan Yang, Yung-Yu Chuang, and Jia-Bin Huang, "Hybrid Neural Fusion for Full-frame Video Stabilization", ICCV, 2021</p>
 
       <br>
 
