update suppl and website

--- a/index.html
+++ b/index.html
@@ -319,15 +319,17 @@ Existing video stabilization methods often generate visible distortion or requir
       <div class="title">Results</div>
       
       <div class="row center">
-		<div class="col m4 s12 center">
+		<div class="col m3 s12 center">
 			<td><a href="website/HTML/pages/additional_comparisons.html"><div class="navunselected" onmouseover="this.className='navselected';" onmouseout="this.className='navunselected';"><img src="website/HTML/compressed_results/additional_comparisons/additional_comparisons.jpg" width="300"><br>Additional Comparisons</div></a></td>
 		</div>
-		<div class="col m4 s12 center">
-			<!-- <td><a href="pages/fence.html"><div class="navunselected" onmouseover="this.className='navselected';" onmouseout="this.className='navunselected';"><img src="teasers/00003.jpg" width="300"><br>Ablation studies</div></a></td> -->
-			<td><a href="website/HTML/pages/failure_cases.html"><div class="navunselected" onmouseover="this.className='navselected';" onmouseout="this.className='navunselected';"><img src="website/HTML/compressed_results/00140.png" width="300"><br>Failure cases</div></a></td>
-		</div>
-		<div class="col m4 s12 center">
+		<div class="col m3 s12 center">
 			<td><a href="website/HTML/pages/bonus_applications.html"><div class="navunselected" onmouseover="this.className='navselected';" onmouseout="this.className='navunselected';"><img src="website/HTML/compressed_results/bonus_applications.jpg" width="300"><br>Ablation studies & Bonus applications</div></a></td>
+		</div>
+		<div class="col m3 s12 center">
+			<td><a href="website/HTML/pages/video_completion.html"><div class="navunselected" onmouseover="this.className='navselected';" onmouseout="this.className='navunselected';"><img src="website/HTML/compressed_results/video_completion.jpg" width="300"><br>Comparisons to video completion</div></a></td>
+		</div>
+		<div class="col m3 s12 center">
+			<td><a href="website/HTML/pages/failure_cases.html"><div class="navunselected" onmouseover="this.className='navselected';" onmouseout="this.className='navunselected';"><img src="website/HTML/compressed_results/00140.png" width="300"><br>Failure cases</div></a></td>
 		</div>
       </div>
 
