--- a/website/HTML/pages/failure_cases.html
+++ b/website/HTML/pages/failure_cases.html
@@ -7,7 +7,7 @@
 <!--[if (gte IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
 <head>
 	<meta charset="UTF-8">
-	<title>Neural Re-rendering for Full-frame Video Stabilization - Supplementary Material</title>
+	<title>Hybrid Neural Fusion for Full-frame Video Stabilization - Supplementary Material</title>
 	<link href="css/foundation.css" rel="stylesheet" type="text/css" />
 	<link href="css/twentytwenty.css" rel="stylesheet" type="text/css" />
 	<!-- jQuery -->
@@ -26,7 +26,7 @@
 		<div class="row">
 			<div class="col-xs-12 text-center">
 				<br>
-				<h1>Neural Re-rendering for Full-frame Video Stabilization</h1>
+				<h1>Hybrid Neural Fusion for Full-frame Video Stabilization</h1>
 				<br>
 			</div>
 		</div>
