--- a/website/HTML/pages/bonus_applications.html
+++ b/website/HTML/pages/bonus_applications.html
@@ -33,7 +33,7 @@
 		<br>
 		<div class="row">
 			<div class="col-xs-12 text-left">
-				<a href="../main.html">
+				<a href="../../../index.html">
 					<button type="button" class="btn btn-link">
 						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Back
 					</button>
