--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 		
         <div class="col l2 m4 s12">
-          <div class="author"><a href="https://faculty.ucmerced.edu/mhyang/" target="blank">Ming-Hsuan Yang<sup>2,4</sup></a></div>
+          <div class="author"><a href="https://faculty.ucmerced.edu/mhyang/" target="blank">Ming-Hsuan Yang<sup>2,4,5</sup></a></div>
         </div>
 
         <div class="col l2 m4 s12">
@@ -74,7 +74,7 @@
         
       </div>
 
-      <div class="row center testA">
+      <div class="row center">
         <div class="col l3 m4 s12">
           <div class="affiliation"><a href="https://www.ntu.edu.tw/" target="blank"><sup>1</sup>National Taiwan University</a></div>
         </div>
@@ -89,6 +89,10 @@
 
         <div class="col l3 m4 s12">
           <div class="affiliation"><a href="https://www.ucmerced.edu/" target="blank"><sup>4</sup>UC Merced</a></div>
+        </div>
+
+        <div class="col l3 m4 s12">
+          <div class="affiliation"><a href="https://www.yonsei.ac.kr/en_sc/index.jsp" target="blank"><sup>5</sup>Yonsei University</a></div>
         </div>
         
       </div>
