--- a/index.html
+++ b/index.html
@@ -313,8 +313,9 @@ Existing video stabilization methods often generate visible distortion or requir
           <br>
           <a href="https://www.cmlab.csie.ntu.edu.tw/~yulunliu/FuSta/slides_mtk_25min.pptx" target="_blank">Slides</a>
         </div>
-	      
+      </div>
 
+      <div class="row">
         <div class="col m4 s12 center">
           <a href="https://github.com/alex04072000/FuSta" target="_blank">
             <img src="website/images/github.png">
